# cxx-utils

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  hlog.cpp  hlog.h  logger.cpp  logger.h  plugin.h  tinyplug.h  todo.txt  var.h
include/hirzel/: data.h  data.hpp  file.h  file.hpp  fountain.h  json.h  json.hpp  log.hpp  logger.h  logger.hpp  obj.h  path.hpp  plugin.h  plugin.hpp  primitives.hpp  print.hpp  string.h  string.hpp  system.h  system.hpp  time.hpp  validation.h  validation.hpp  var.h
include/hirzel/data/: data.h  json.h  validation.h
include/hirzel/json/: JsonToken.hpp  JsonTokenType.hpp  JsonValue.hpp  JsonValueType.hpp  Token.hpp  TokenType.hpp  Value.hpp  ValueType.hpp
include/hirzel/path/: Path.hpp
include/hirzel/util/: file.h  str.h  sys.h
include/hirzel/utils/: file.h  str.h  sys.h
lib/var/src/: var.cpp  var.h
src/: file.cpp  fileutil.cpp  fileutil.h  fountain.cpp  fountain.h  log.cpp  plugin.cpp  plugin.h  strfbody.h  strutil.cpp  strutil.h  system.cpp  sysutil.cpp  sysutil.h  test_data.cpp  test_file.cpp  test_json.cpp  test_log.cpp  test_path.cpp  test_string.cpp  test_system.cpp  test_validation.cpp.old  var.h
src/hirzel/: file.cpp  json.cpp  log.cpp  path.cpp  string.cpp  system.cpp  time.cpp
src/hirzel/json/: JsonToken.cpp  JsonValue.cpp  Token.cpp  Value.cpp
src/hirzel/path/: Path.cpp
src/test/: data.cpp  file.cpp  json.cpp  plugin.cpp  print.cpp  string.cpp  system.cpp  validation.cpp  validation.cpp.old
test/: .gitignore  assert.h  build.sh  data.cpp  impl.cpp  json.cpp  main  main.cpp  obj.cpp  obj.exp  obj.lib  other.cpp  other.h  test.ps1  test.sh  validation.cpp
